style.css
* {
    margin: 0;
    padding: 0;
    background-color: #1f2937;
}

#whole-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 125px;
    margin-right: 125px;
}

body {
    font-family: "Roboto", sans-serif;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1f2937;
    color: #f9faf8;
}

.logo {
    font-size: 24px;
    font-weight: bold;

}

.nav ul {
    list-style-type: none;
    display: inline-flex;
    align-self: flex-end;
}

.nav li {
    padding: 10px;
}

.nav a {
    font-size: 18px;
    text-decoration: none;
    color: #e5e7eb;
}

.first-section {
    display: flex;
    margin-top: 100px;
    margin-bottom: 100px;
}

.first-section h1 {
    font-size: 48px;
    font-weight: 900;
    color:#f9faf8
}

.first-section p {
    font-size: 18px;
    color: #f9faf8;
}

.hero, .image {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #1f2937;
    padding: 20px;
}

.hero {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.image {
    color: #e5e7eb;
    font-size: 18px;
    background-color: #707070;
    text-align: center;
}

button {
    margin-top: 10px;
    background-color: #3882f6;
    color: #f9faf8;
    font-size: 18px;
    font-weight: bold;
    border: none;
    padding: 5px;
    width: 120px;
    border-radius: 5px;
}

.second-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: white;
}

.second-section h1 {
    margin-top: 50px;
    padding: 20px;
    background-color: white;
    color:#1f2937;
    font-size: 36px;
    text-align: center;
    font-weight: 900;
}

.random {
    margin: 50px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: white;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;

}

.container p {
    color: #525252;
    text-align: center;
    padding: 5px;
    background-color: white;
    padding: 20px;
}

.pic {
    width: 150px;
    height: 150px;
    border-style: solid;
    border-color: #3882f6;
    border-radius: 15px;
    background-color: white;
  
}

blockquote {
    color: #1f2937;
    background-color: #e5e7eb;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    padding: 100px;
}

.third-section p {
    font-weight: bold;
    background-color: #e5e7eb;
    color: #1f2937;
    text-align: end;
    font-size: 24px;
}

.fourth-section {
    width: 100%;
    height:200px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
}
.cta {
    width: 60%;
    height:fit-content;
    background-color: #3882f6;
    color:#f9faf8;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 40px;
    border-radius: 10px;
}

.cta p, 
.cta b {
    background-color: #3882f6;
    color:#e5e7eb
}

.cta button {
    border-style: solid;
    border-width: 2px;
}

.footer {
    color:#e5e7eb;
    padding: 20px;
    text-align: center;
}

